# AdMatch

./: CMakeLists.txt  LICENSE  Makefile  README.md
data/: bing.txt  large_http_request.txt  large_request.txt
data/crs/: rule1.nfa  rule100.nfa  rule102.nfa  rule104.nfa  rule108.nfa  rule112.nfa  rule116.nfa  rule118.nfa  rule12.nfa  rule120.nfa  rule122.nfa  rule123.nfa  rule124.nfa  rule125.nfa  rule126.nfa  rule13.nfa  rule136.nfa  rule138.nfa  rule139.nfa  rule141.nfa  rule142.nfa  rule145.nfa  rule146.nfa  rule149.nfa  rule15.nfa  rule151.nfa  rule155.nfa  rule157.nfa  rule16.nfa  rule160.nfa  rule162.nfa  rule164.nfa  rule165.nfa  rule166.nfa  rule167.nfa  rule168.nfa  rule171.nfa  rule172.nfa  rule173.nfa  rule175.nfa  (+61 more)
data/raw/: rule101.nfa  rule103.nfa  rule105.nfa  rule106.nfa  rule107.nfa  rule109.nfa  rule11.nfa  rule110.nfa  rule111.nfa  rule113.nfa  rule114.nfa  rule115.nfa  rule117.nfa  rule119.nfa  rule121.nfa  rule127.nfa  rule128.nfa  rule129.nfa  rule130.nfa  rule131.nfa  rule132.nfa  rule133.nfa  rule134.nfa  rule135.nfa  rule137.nfa  rule14.nfa  rule140.nfa  rule143.nfa  rule144.nfa  rule147.nfa  rule148.nfa  rule150.nfa  rule152.nfa  rule153.nfa  rule154.nfa  rule156.nfa  rule158.nfa  rule159.nfa  rule161.nfa  rule163.nfa  (+71 more)
data/snort/: 1.nfa  100.nfa  101.nfa  102.nfa  103.nfa  104.nfa  105.nfa  106.nfa  107.nfa  108.nfa  109.nfa  110.nfa  111.nfa  112.nfa  113.nfa  114.nfa  115.nfa  116.nfa  117.nfa  118.nfa  119.nfa  122.nfa  124.nfa  126.nfa  128.nfa  129.nfa  13.nfa  130.nfa  131.nfa  132.nfa  133.nfa  134.nfa  135.nfa  136.nfa  137.nfa  138.nfa  140.nfa  141.nfa  142.nfa  143.nfa  (+307 more)
include/: ITA_regex.h
script/: run.sh  script.py
src/: AS_kernel.cu  AdMatch_kernel.cu  Interface.cu  TKO_kernel.cu  common.h  host_functions.cu  host_functions.h  iNFA_kernel.cu  kernel_common.cu  kernel_common.h  mem_alloc.cu  mem_alloc.h  nfa_kernels.h  state_vector.cpp  state_vector.h  transition_graph.cpp  transition_graph.h
tools/: CMakeLists.txt  batch.cpp  example.cpp  main.cpp  main.cu  run.sh  sequence.cpp
